--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
 frontend.url = http://example.com
-backend.rest = https://jsonplaceholder.typicode.com/todos
+backend.rest = https://protected-thicket-07057.herokuapp.com/api/v1/on-covid-19
