--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
-frontend.url = http://example.com
+frontend.url = https://fathomless-shore-57723.herokuapp.com/
 backend.rest = https://protected-thicket-07057.herokuapp.com/api/v1/on-covid-19
